--- a/ayoub/Vagrantfile
+++ b/ayoub/Vagrantfile
@@ -16,7 +16,7 @@ Vagrant.configure("2") do |config|
         end
         # k3s installation
         # https://rancher.com/docs/k3s/latest/en/quick-start/
-        server.vm.provision "shell", path: "srever_config.sh"
+        # server.vm.provision "shell", path: "server_config.sh"
 
         server.vm.post_up_message = "configuration finished , the server is runnung at 192.168.42.110 "
        
@@ -32,9 +32,9 @@ Vagrant.configure("2") do |config|
             v.cpus = 1
         end
          # k3s installation
-         worker.vm.provision "shell", path: "worker_config.sh"
+        #  worker.vm.provision "shell", path: "worker_config.sh"
 
-         server.vm.post_up_message = "configuration finished , the worker is runnung at 192.168.42.111 "
+         worker.vm.post_up_message = "configuration finished , the worker is runnung at 192.168.42.111 "
 
     end
     
