--- a/ayoub/Vagrantfile
+++ b/ayoub/Vagrantfile
@@ -1,22 +1,42 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-Vagrant.configure("2") do |config|
+$server_config = <<-SCRIPT
+
+# curl -sfL https://get.k3s.io | K3S_KUBECONFIG_MODE="644" INSTALL_K3S_EXEC="--flannel-iface eth1" sh -s -
+# curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--flannel-iface eth1" sh -s - --write-kubeconfig-mode 644
+# echo $(sudo cat /var/lib/rancher/k3s/server/node-token) > ~/home/.token
+
+echo "aaaaaaaaaa" > token
+mkdir bbbbbbbb
+SCRIPT
+
+$worker_config = <<-SCRIPT
+# created in /home/vagrant
+mkdir 99999999999999999999999
+echo "+++++++++++++++++ HELLO WORLD *******************" > test.txt
+
+SCRIPT
+
+VAGRANTFILE_API_VERSION = "2"
+
+Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.box = "centos/7"
+    # config.vm.synced_folder ".", "/vagrant", type: "nfs", rsync__exclude: ".git/" 
+    config.vm.synced_folder ".", "/vagrant", type: "rsync", rsync__exclude: ".git/" 
 
     config.vm.define "ayoubS" do |server|
         server.vm.box_check_update  = false
         server.vm.hostname = "ayoubS"
         server.vm.network "private_network", ip: "192.168.42.110"
-        #server.vm.provider "virtualbox" do |v|
         server.vm.provider :virtualbox do |v|
             v.name = "ayoubS"
             v.memory = 1024
             v.cpus = 1
         end
         # k3s installation
-        # https://rancher.com/docs/k3s/latest/en/quick-start/
         # server.vm.provision "shell", path: "server_config.sh"
+        server.vm.provision "shell", inline: $server_config
 
         server.vm.post_up_message = "configuration finished , the server is runnung at 192.168.42.110 "
        
@@ -33,8 +53,9 @@ Vagrant.configure("2") do |config|
         end
          # k3s installation
         #  worker.vm.provision "shell", path: "worker_config.sh"
+        worker.vm.provision "shell", inline: $worker_config
 
-         worker.vm.post_up_message = "configuration finished , the worker is runnung at 192.168.42.111 "
+        worker.vm.post_up_message = "configuration finished , the worker is runnung at 192.168.42.111 "
 
     end
     
