--- a/ayoub/Vagrantfile
+++ b/ayoub/Vagrantfile
@@ -3,18 +3,19 @@
 
 $server_config = <<-SCRIPT
 
+vagrant plugin install vagrant-scp
+
 # curl -sfL https://get.k3s.io | K3S_KUBECONFIG_MODE="644" INSTALL_K3S_EXEC="--flannel-iface eth1" sh -s -
 # curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--flannel-iface eth1" sh -s - --write-kubeconfig-mode 644
-# echo $(sudo cat /var/lib/rancher/k3s/server/node-token) > ~/home/.token
+# echo $(sudo cat /var/lib/rancher/k3s/server/node-token) > ~/vagrant/k3s_token
 
-echo "aaaaaaaaaa" > token
-mkdir bbbbbbbb
+echo "aaaaaaaaaa" > k3s_token
+echo "here is ur token" > /vagrant/tokenz
+
 SCRIPT
 
 $worker_config = <<-SCRIPT
-# created in /home/vagrant
-mkdir 99999999999999999999999
-echo "+++++++++++++++++ HELLO WORLD *******************" > test.txt
+# echo "+++++++++++++++++ HELLO WORLD *******************" > test.txt
 
 SCRIPT
 
@@ -23,10 +24,10 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.box = "centos/7"
     # config.vm.synced_folder ".", "/vagrant", type: "nfs", rsync__exclude: ".git/" 
-    config.vm.synced_folder ".", "/vagrant", type: "rsync", rsync__exclude: ".git/" 
+    # config.vm.synced_folder ".", "/vagrant", SharedFoldersEnableSymlinksCreate: true
+    # , disabled: true
 
     config.vm.define "ayoubS" do |server|
-        server.vm.box_check_update  = false
         server.vm.hostname = "ayoubS"
         server.vm.network "private_network", ip: "192.168.42.110"
         server.vm.provider :virtualbox do |v|
@@ -34,9 +35,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
             v.memory = 1024
             v.cpus = 1
         end
-        # k3s installation
-        # server.vm.provision "shell", path: "server_config.sh"
         server.vm.provision "shell", inline: $server_config
+
+        # server.trigger.after :up do |tr|
+        #     tr.run = {inline: "vagrant scp ayoubS:/vagrant/tokenz ."}
+        # end
 
         server.vm.post_up_message = "configuration finished , the server is runnung at 192.168.42.110 "
        
@@ -44,14 +47,12 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     config.vm.define "ayoubSW" do |worker|
         worker.vm.hostname = "ayoubSW"
-        worker.vm.box_check_update  = false
         worker.vm.network "private_network", ip: "192.168.42.111"
         worker.vm.provider "virtualbox" do |v|
             v.name = "ayoubSW"
             v.memory = 1024
             v.cpus = 1
         end
-         # k3s installation
         #  worker.vm.provision "shell", path: "worker_config.sh"
         worker.vm.provision "shell", inline: $worker_config
 
