--- a/ayoub/Vagrantfile
+++ b/ayoub/Vagrantfile
@@ -3,7 +3,7 @@
 
 $server_config = <<-SCRIPT
 
-vagrant plugin install vagrant-scp
+# vagrant plugin install vagrant-scp
 
 # curl -sfL https://get.k3s.io | K3S_KUBECONFIG_MODE="644" INSTALL_K3S_EXEC="--flannel-iface eth1" sh -s -
 # curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--flannel-iface eth1" sh -s - --write-kubeconfig-mode 644
@@ -22,12 +22,15 @@ SCRIPT
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-    config.vm.box = "centos/7"
+    # config.vm.box = "centos/7"
+    config.vm.box = "generic/centos8"
     # config.vm.synced_folder ".", "/vagrant", type: "nfs", rsync__exclude: ".git/" 
     # config.vm.synced_folder ".", "/vagrant", SharedFoldersEnableSymlinksCreate: true
     # , disabled: true
 
     config.vm.define "ayoubS" do |server|
+        server.vm.synced_folder ".", "/vagrant", SharedFoldersEnableSymlinksCreate: true
+
         server.vm.hostname = "ayoubS"
         server.vm.network "private_network", ip: "192.168.42.110"
         server.vm.provider :virtualbox do |v|
