--- a/ayoub/Vagrantfile
+++ b/ayoub/Vagrantfile
@@ -14,8 +14,8 @@ SCRIPT
 
 $worker_config = <<-SCRIPT
 
-curl -sfL https://get.k3s.io | K3S_URL=https://192.168.42.110:6443 INSTALL_K3S_EXEC="--flannel-iface eth1" --token-file /vagrant/k3s_token --node-ip 192.168.42.111 sh -
-
+#curl -sfL https://get.k3s.io | K3S_URL=https://192.168.42.110:6443 INSTALL_K3S_EXEC="--flannel-iface eth1" --token-file /vagrant/k3s_token --node-ip 192.168.42.111 sh -
+ curl -sfL https://get.k3s.io | K3S_URL=https://192.168.42.110:6443 INSTALL_K3S_EXEC="--node-ip=192.168.42.111 --flannel-iface eth1" K3S_TOKEN_FILE="/vagrant/k3s_token"  sh -
 SCRIPT
 
 VAGRANTFILE_API_VERSION = "2"
