--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -3,7 +3,7 @@
 
 $server_config = <<-SCRIPT
 
-# systemctl stop firewalld
+systemctl stop firewalld
 # systemctl disable firewalld
 
 sudo echo "192.168.42.110  ayoubS" >> /etc/hosts
