--- a/p2/service/svc.yaml
+++ b/p2/service/svc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app
+  name: app1
 spec:
   selector:
-    app: app
+    app: app1
   ports:
     - protocol: TCP
       port: 3200
       targetPort: 8080
-# target port should be the same as containerPort
+# targetPort should be the same as containerPort
