--- a/p2/ingress.yaml
+++ b/p2/ingress.yaml
@@ -1,7 +1,35 @@
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: ing-service
+# spec:
+#   rules:
+#   - http:
+#       paths:
+#       - path: /
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name:  app3-service
+#             port:
+#               number: 1337 
+
+###
+# this header dosent work
+###
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   annotations:
+#     kubernetes.io/ingress.class: "nginx"
+#   name: cluster-ingress
+#   namespace: default
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-service
+  name: hello-kubernetes
+  namespace: default
 spec:
   rules:
   - http:
@@ -10,23 +38,26 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: app1
+            name:  app3-service
             port:
-              number: 3200
-
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: ingress-wildcard-host
-# spec:
-#   rules:
-#   - host: "foo.bar.com"
-#     http:
-#       paths:
-#       - pathType: Prefix
-#         path: "/bar"
-#         backend:
-#           service:
-#             name: service1
-#             port:
-#               number: 80
+              number: 1337
+  - host: app1.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: /
+        backend:
+          service:
+            name: app1-service
+            port:
+              number: 1337
+  - host: app2.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: /
+        backend:
+          service:
+            name: app2-service
+            port:
+              number: 1337
