--- a/p2/service/services.yaml
+++ b/p2/service/services.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: inception-of-things
   name: app1-service
 spec:
   selector:
@@ -16,6 +17,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: inception-of-things
   name: app2-service
 spec:
   selector:
@@ -30,6 +32,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: inception-of-things
   name: app3-service
 spec:
   selector:
