--- a/p2/deployment/my_apps.yaml
+++ b/p2/deployment/my_apps.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: inception-of-things
+  namespace: inception
   name: app1
   labels:
     app: app1
@@ -29,7 +29,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: inception-of-things
+  namespace: inception
   name: app2
   labels:
     app: app2
@@ -57,7 +57,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: inception-of-things
+  namespace: inception
   name: app3
   labels:
     app: app3
