--- a/p2/ingress.yaml
+++ b/p2/ingress.yaml
@@ -29,7 +29,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: hello-kubernetes
-  namespace: inception-of-things
+  namespace: inception
 spec:
   rules:
   - http:
