--- a/p2/namespace.yaml
+++ b/p2/namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: inception-of-things
+  name: inception
   labels:
-    name: inception-of-things
+    name: inception
 
