--- a/p2/service/services.yaml
+++ b/p2/service/services.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: inception-of-things
+  namespace: inception
   name: app1-service
 spec:
   selector:
@@ -17,7 +17,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: inception-of-things
+  namespace: inception
   name: app2-service
 spec:
   selector:
@@ -32,7 +32,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: inception-of-things
+  namespace: inception
   name: app3-service
 spec:
   selector:
