--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -28,45 +28,42 @@ while (true)
     do
         output=$(kubectl get pods --namespace inception | awk '{ print $3 }' | awk 'NR!=1' | grep Running | wc -l)
          
-     if [ $output == "1" ]; then
-              echo -e "\033[0;32m Pod1 is Running .....\033[0m"
+        if [ $output == "1" ]; then
+            echo -e "\033[0;32m Pod1 is Running .....\033[0m"
      
-     elif [ $output == "2" ]; then
+        elif [ $output == "2" ]; then
             echo -e "\033[0;32m Pod2 is Running .....\033[0m"
      
-     elif [ $output == "3" ]; then
+        elif [ $output == "3" ]; then
             echo -e "\033[0;32m Pod3 is Running .....\033[0m"
      
-     elif [ $output == "4" ]; then
+        elif [ $output == "4" ]; then
             echo -e "\033[0;32m Pod4 is Running .....\033[0m"
      
-     elif [ $output == "5" ]; then
+        elif [ $output == "5" ]; then
             echo -e "\033[0;32m All Pods are Ready and  Running .....\033[0m"
-        sleep 2
-        # exit 0
-        break
-    
-     else 
-        echo -e "\033[0;31m Waiting for Pods to get Ready .....\033[0m"
-        sleep 2
+            sleep 2
+            # exit 0
+            break
 
-     fi
+        else 
+            echo -e "\033[0;31m Waiting for Pods to get Ready .....\033[0m"
+            sleep 4
+        fi
     
     done
 
     while (true)
         do
             output=$(curl -s -o /dev/null -w '%{http_code}' 192.168.42.110)
-             
-         if [ $output == "200" ]; then
-            echo -e "\033[0;32m HTTP request was successful .....\033[0m"
-            exit 0
-         
-         else
-            echo -e "\033[0;31m HTTP server fails to deliver the page .....\033[0m"
-            sleep 2
-         fi
-        
+            echo $output
+            if [ $output == "200" ]; then
+                echo -e "\033[0;32m HTTP request was successful .....\033[0m"
+                exit 0
+            else
+                echo -e "\033[0;31m HTTP server fails to deliver the page .....\033[0m"
+                sleep 2
+            fi
         done
     
 SCRIPT
