--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -54,16 +54,18 @@ while (true)
     done
 
     while (true)
-        do
-            output=$(curl -s -o /dev/null -w '%{http_code}' 192.168.42.110)
-            echo $output
-            if [ $output == "200" ]; then
+        do         
+            echo -e "\033[0;31m HTTP server fails to deliver the page .....\033[0m"
+            sleep 3
+
+            output=$(curl --connect-timeout 3 -s -o /dev/null -w '%{http_code}' 192.168.42.110)
+
+            if [ $output -eq 200 ]; then 
                 echo -e "\033[0;32m HTTP request was successful .....\033[0m"
-                exit 0
-            else
-                echo -e "\033[0;31m HTTP server fails to deliver the page .....\033[0m"
                 sleep 2
+                exit 0
             fi
+
         done
     
 SCRIPT
