--- a/p3/argo_conf/application.yaml
+++ b/p3/argo_conf/application.yaml
@@ -1,23 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myapp-argo-application
+  name: playground-argocd
   namespace: argocd
 spec:
   project: default
-
   source:
     repoURL: https://github.com/ayoubrs/argoCD.git
     targetRevision: HEAD
     path: dev
-  destination: 
+  destination:
     server: https://kubernetes.default.svc
-    namespace: myapp
-
+    namespace: dev
   syncPolicy:
-    syncOptions:
-    - CreateNamespace=true
-
     automated:
       selfHeal: true
       prune: true
