--- a/p3/argo_conf/dev/deployment.yaml
+++ b/p3/argo_conf/dev/deployment.yaml
@@ -1,19 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: playground
+  labels:
+    app: playground
 spec:
+  replicas: 2
   selector:
     matchLabels:
-      app: myapp
-  replicas: 2
+      app: playground
   template:
     metadata:
       labels:
-        app: myapp
+        app: playground
     spec:
       containers:
-      - name: myapp
-        image: nanajanashia/argocd-app:1.1
+      - name: wil42-playground
+        image: wil42/playground:v1
         ports:
-        - containerPort: 8080
+        - containerPort: 1337
