--- a/p3/Vagrantfile
+++ b/p3/Vagrantfile
@@ -27,13 +27,13 @@ echo "\033[0;32m\n\n============================================================
     echo  "\033[0;32m\t  ********* Kubectl Configuration  ********* \033[0m"
 echo "\033[0;32m================================================================\n\n"
 
-    curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+    curl  -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" >/dev/null 
     chmod +x ./kubectl
     sudo mv ./kubectl /usr/local/bin/kubectl
 
 echo "\033[0;32m\n\n================================================================\033[0m"
     echo  "\033[0;32m\t  ********* k3d install ********* \033[0m"
-echo "================================================================\n\n\033[0m"
+echo "\033[0;32m================================================================\n\n\033[0m"
 
 curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
 
@@ -68,13 +68,6 @@ echo "\033[0;32m================================================================
     #sudo kubectl get svc -A --wait
     #sudo kubectl get pod --namespace argocd -w
 
-    # sudo kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d; echo >> /argocd_pwd.txt
-
-    # sudo kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" > pwd_encrypted
-    # sudo cat pwd_encrypted | base64 -d > pwd_decrypted ; echo "" >> pwd_decrypted
-    # # sudo cat pwd_decrypted
-    # sudo rm pwd_encrypted
-
 echo "\033[0;32m\n\n================================================================\033[0m"
     echo -e "\033[0;32m\t  ********* Deploying the application  ********* \033[0m"
 echo "\033[0;32m================================================================\n\n\033[0m"
@@ -82,19 +75,27 @@ echo "\033[0;32m================================================================
     sudo kubectl  apply -f /vagrant/argo_conf/application.yaml
     sudo kubectl  apply -f /vagrant/argo_conf/dev/deployment.yaml --namespace dev
     sudo kubectl  apply -f /vagrant/argo_conf/dev/service.yaml --namespace dev
-    sudo kubectl  apply -f /vagrant/argo_conf/dev/ingress.yaml --namespace dev
+# sudo kubectl  apply -f /vagrant/argo_conf/dev/ingress.yaml --namespace dev
 
     echo -e "\033[0;32m\t  ********* agroCD pwd is:  ********* \033[0m"
 
-    sudo kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" > pwd_encrypted
-    sudo cat pwd_encrypted | base64 -d > pwd_decrypted ; echo "" >> pwd_decrypted
-    sudo rm pwd_encrypted
-    echo ""
-    sudo cat pwd_decrypted
+    while (true)
+        do
+            output=$(sudo kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}") > /dev/null 2>&1
+            len=${#output}
+            
+            if [ $len -eq 24 ]; then 
+                echo "agroCD password is: "
+                sudo kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d; echo
+                exit 0
+            fi
+
+            echo "\033[0;31m waiting for argoCD to get ready .....\033[0m"
+            sleep 4
+
+        done
 
     echo "visit the link: \n https://192.168.42.112:80"
-
-    # Error from server (NotFound): secrets "argocd-initial-admin-secret" not found
 
 SCRIPT
 
