--- a/p3/Vagrantfile
+++ b/p3/Vagrantfile
@@ -87,7 +87,7 @@ echo "\033[0;32m================================================================
             if [ $len -eq 24 ]; then 
                 echo "agroCD password is: "
                 sudo kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d; echo
-                exit 0
+                break
             fi
 
             echo "\033[0;31m waiting for argoCD to get ready .....\033[0m"
