--- a/p3/Vagrantfile
+++ b/p3/Vagrantfile
@@ -63,7 +63,7 @@ echo "\033[0;32m\n\n============================================================
     echo -e "\033[0;32m\t  ********* Loadbalancer patch  ********* \033[0m"
 echo "\033[0;32m================================================================\n\n\033[0m"
 
-    sudo kubectl patch svc argocd-server -n argocd -p '{"spec": {"type": "LoadBalancer"}}' 
+    sudo kubectl patch svc argocd-server -n argocd -p '{"spec": {"type": "LoadBalancer"}}'
     #sudo kubectl get svc -A
     #sudo kubectl get svc -A --wait
     #sudo kubectl get pod --namespace argocd -w
@@ -85,17 +85,19 @@ echo "\033[0;32m================================================================
             len=${#output}
             
             if [ $len -eq 24 ]; then 
-                echo "agroCD password is: "
+                echo "\n\n\nagroCD password is: \n\n"
                 sudo kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d; echo
                 break
             fi
 
             echo "\033[0;31m waiting for argoCD to get ready .....\033[0m"
-            sleep 4
+            sleep 6
 
         done
 
-    echo "visit the link: \n https://192.168.42.112:80"
+    echo "\nvisit the link: \n https://192.168.42.112:80"
+    # open -a "Google Chrome" https://192.168.42.112:80
+    open -a "Firefox" https://192.168.42.112:80
 
 SCRIPT
 
