--- a/p3/cluster_synced_repo/nana_janashia/application.yaml
+++ b/p3/cluster_synced_repo/nana_janashia/application.yaml
@@ -7,9 +7,9 @@ spec:
   project: default
 
   source:
-    repoURL: https://github.com/ayoubrs/argoCD.git
+    repoURL: https://github.com/ayoubrs/kubernetes/tree/main/p3/cluster_synced_repo
     targetRevision: HEAD
-    path: dev
+    path: p3/synced_repo/playground/dev
   destination: 
     server: https://kubernetes.default.svc
     namespace: myapp
