--- a/p3/Vagrantfile
+++ b/p3/Vagrantfile
@@ -97,7 +97,7 @@ echo "\033[0;32m================================================================
 
     echo "\nvisit the link: \n https://192.168.42.112:80"
     # open -a "Google Chrome" https://192.168.42.112:80
-    open -a "Firefox" https://192.168.42.112:80
+    # open -a "Firefox" https://192.168.42.112:80
 
 SCRIPT
 
