--- a/p3/cluster_synced_repo/application.yaml
+++ b/p3/cluster_synced_repo/application.yaml
@@ -1,23 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myapp-argo-application
+  name: playground-argocd
   namespace: argocd
 spec:
   project: default
 
   source:
-    repoURL: https://github.com/ayoubrs/kubernetes/tree/main/p3/cluster_synced_repo
+    repoURL: https://github.com/ayoubrs/argo2.git
     targetRevision: HEAD
-    path: p3/cluster_synced_repo/nana/dev
-  destination: 
+    path: dev
+  destination:
     server: https://kubernetes.default.svc
-    namespace: myapp
+    namespace: dev
 
   syncPolicy:
-    syncOptions:
-    - CreateNamespace=true
-
     automated:
       selfHeal: true
       prune: true
